--- a/src/static/_locales/en/messages.json
+++ b/src/static/_locales/en/messages.json
@@ -1444,5 +1444,17 @@
   },
   "view_W3NManage_remove": {
     "message": "Remove web3name"
+  },
+  "view_CreateDidDApp_heading": {
+    "message": "Create On-chain DID"
+  },
+  "view_CreateDidDApp_origin": {
+    "message": "Request from:"
+  },
+  "view_CreateDidDApp_error_full_did": {
+    "message": "DID already on chain"
+  },
+  "view_CreateDidDApp_error_did_removed": {
+    "message": "DID removed from chain"
   }
 }
