--- a/src/static/_locales/en/messages.json
+++ b/src/static/_locales/en/messages.json
@@ -1052,7 +1052,7 @@
     "message": "Remove on-chain DID"
   },
   "view_DidManage_unusable": {
-    "message": "This identity’s DID cannot be used anymore because its on-chain DID has been removed."
+    "message": "This identity’s DID cannot be used anymore because it has been removed."
   },
   "view_DidEndpointsForm_heading": {
     "message": "Service Endpoints"
