SK-1431: optional identity.did (#1679)

--- a/src/static/_locales/en/messages.json
+++ b/src/static/_locales/en/messages.json
@@ -1412,6 +1412,9 @@
   "view_SignDidExtrinsic_error_light_did": {
     "message": "You need to upgrade to an on-chain DID first"
   },
+  "view_SignDidExtrinsic_error_unusable_did": {
+    "message": "This identity’s DID has been removed and is unusable"
+  },
   "view_SignDidExtrinsic_error_forbidden": {
     "message": "This DID call is forbidden"
   },
