--- a/src/static/_locales/en/messages.json
+++ b/src/static/_locales/en/messages.json
@@ -1487,7 +1487,7 @@
     "message": "Connect a web3name to your on-chain DID"
   },
   "view_W3NCreateChoose_info": {
-    "message": "Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis"
+    "message": "Your web3name is yours forever and no one else can claim it. Choose a payment option below."
   },
   "view_W3NCreateChoose_kilt": {
     "message": "Pay with KILT"
